--- a/index.html
+++ b/index.html
@@ -8,18 +8,24 @@
     <h1>Home Transformations</h1>
     <div class="column">
       <h2>Before</h2>
-      <img src="" alt="before picture of house">
-      <p></p>
+      <img src="http://lorempixel.com/image_output/city-q-c-400-200-9.jpg" alt="before picture of house">
+      <p>
+        Lorem ipsum dolor sit amet, ut veri falli alterum sit. Wisi ipsum ignota et nec. Vix te hinc nusquam accusata, ad eos justo error, magna atqui vis ea. Modo autem volumus nec ea, error appellantur repudiandae eu ius.
+      </p>
     </div>
     <div class="column">
       <h2>During</h2>
-      <img src="" alt="during picture of house">
-      <p></p>
+      <img src="http://lorempixel.com/image_output/city-q-c-400-200-6.jpg" alt="during picture of house">
+      <p>
+        Atqui euripidis neglegentur eam et, oratio omittam mea te. Dicam primis nominati id eam, te ludus patrioque vis, id verear latine invenire ius. Velit everti viderer quo ea, detracto gloriatur sea ut, fugit instructior cum at. Vero iracundia ei quo. No fugit mucius feugait pri, fabulas definiebas reprimique an his, unum sonet reprimique ad pri.
+      </p>
     </div>
     <div class="column">
       <h2>After</h2>
-      <img src="" alt="after picture of house">
-      <p></p>
+      <img src="http://lorempixel.com/image_output/city-q-c-400-200-2.jpg" alt="after picture of house">
+      <p>
+        Imperdiet adversarium in eos, wisi forensibus at pri. Et quod ignota populo nam, an sit lorem vitae. Ea his ignota vivendum. Senserit definiebas nam ei, sit no ornatus meliore. Duo ad populo graeci voluptatibus, nostro animal definitionem ex sit, ex ullum graeci signiferumque mel.
+      </p>
     </div>
   </body>
 </html>
